# reef_estimator

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: estimates_with_rgbd_layout.xml  sync_estimates_layout.xml  sync_estimates_measurements_layout.xml
include/: basic_functions.h  estimator.h  sensor_manager.h  xy_estimator.h  xyz_estimator.h  z_estimator.h
launch/: estimator_bag.launch  estimator_only.launch  estimator_record.launch  humberto_record.launch  pix-test.launch  pixhawk_verify_estimator.launch  realsense_estimator_record.launch  record_estimator.launch  record_raw.launch  record_stable_raw.launch  verify_estimator.launch  xy_estimator.launch
params/: basic_params.yaml  dodo_camera.yaml  kiwi_camera.yaml  wren_camera.yaml  xy_est_params.yaml  z_est_params.yaml
scripts/: PlotWindow.py  online_histogram.py  verify_estimates.py  verify_rgbd.py
src/: estimator.cpp  reef_estimator_node.cpp  sensor_manager.cpp  xy_estimator.cpp  xyz_estimator.cpp  z_estimator.cpp
